--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
   <title>SABRINA'S ARCHIVE OF PRETTY STUFF</title>
   
   </head>
+  .header {
+  color: purple;
+  font-size: 52px;
+  border: 60px black;
+  
+}
+
+<h1 class = 'header'>
+  Sabrina!!! it lit!
+  <h1/>
+  
+<h2> u know what it is <h2/>
+  <h3> we love girls who code! <h3/>
+  
+  
            
   <body background=" https://s-media-cache-ak0.pinimg.com/736x/23/be/61/23be6180724ac1cdba37a36b5e7b2b5e.jpg">
     
