--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          src="https://s-media-cache-ak0.pinimg.com/736x/01/d8/52/01d85241578210bd5e4d1609d869b774.jpg" alt = 
 
 
-    <a href="https://video.search.yahoo.com/video/play;_ylt=A0LEVj9xaz9XIUcAexwnnIlQ;_ylu=X3oDMTEyODk4bTYyBGNvbG8DYmYxBHBvcwMxBHZ0aWQDQjIwMDNfMQRzZWMDc2M-?p=the+neighbourhood+wiped+out&back=https%3A%2F%2Fsearch.yahoo.com%2Fyhs%2Fsearch%3Fp%3Dthe%2Bneighbourhood%2Bwiped%2Bout%26hsimp%3Dyhs-002%26hspart%3Dmozilla%26ei%3DUTF-8&fr=yhs-mozilla-002&turl=http%3A%2F%2Fts3.mm.bing.net%2Fth%3Fid%3DOVP.V1ca9f8d11af0e4d6a15bec2578f023b5%26pid%3D15.1&rurl=http%3A%2F%2Fwww.vevo.com%2Fwatch%2Fthe-neighbourhood%2FWiped-Out%21-%28Audio%29%2FUSSM21502122&tit=Wiped+Out%21+%28Audio%29+-+The+Neighbourhood&l=374&vid=9403123bf307422dba299c3804952163&sigr=12bj2p2n6&sigb=13768f0cb&sigt=1161na3g4&sigi=12b7f72pt&hspart=mozilla&hsimp=yhs-002">
+    <a href="https://www.youtube.com/watch?v=Z3UCVQIjAJ8">
        <p>
        Check out this sick beat</a>
   </p>
